--- a/news.html
+++ b/news.html
@@ -22,9 +22,9 @@
 
 <header>
     <div class="block">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
     </div>
 </header>
 
@@ -34,7 +34,7 @@
             <p class="versionLink">Логотип</p>
             <div class="travel">
                 <a class="travelLink" href="">
-                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                    <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
                 </a>
                 <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
                 <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
@@ -106,7 +106,7 @@
                             <button type="button" class="presentBtn">Голосовать</button>
                             <button type="button" class="presentBtn">все опросы</button>
                         </div>
-                        <img class="hiddenImg" src="/assets/img/teamH.png" alt="">
+                        <img class="hiddenImg" src="assets/img/teamH.png" alt="">
                     </div>
                 </div>
                 <div class="middle col-xl-6 p-0 d-flex flex-wrap">
@@ -188,7 +188,7 @@
 
                     </div>
                     <div class="recHidden">
-                        <img class="recHiddenImg" src="/assets/img/shop.jpg" alt="">
+                        <img class="recHiddenImg" src="assets/img/shop.jpg" alt="">
                     </div>
 
                 </div>
@@ -279,7 +279,7 @@
                     <a class="recordingAlllink" href="/">все записи в блогах</a>
                 </div>
                 <div class="newsImg">
-                    <img class="rybbuImg" src="/assets/img/term.jpg" alt="">
+                    <img class="rybbuImg" src="assets/img/term.jpg" alt="">
                 </div>
 
                 <div class="rightTitle">
@@ -331,12 +331,12 @@
                     <a class="recordingAlllink" href="/">все новости редакции</a>
                 </div>
                 <div class="newsImg">
-                    <img class="rybbuImg" src="/assets/img/wms.jpg" alt="">
+                    <img class="rybbuImg" src="assets/img/wms.jpg" alt="">
                 </div>
 
                 <div class="hearing">
                     <div class="hearingImg">
-                        <img src="/assets/img/svg/ear.svg" alt="">
+                        <img src="assets/img/svg/ear.svg" alt="">
                     </div>
                     <div class="hearingContent">
                         <a class="close" href="/"></a>
@@ -355,35 +355,35 @@
                 </div>
                 <div class="blockParent">
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
@@ -409,7 +409,7 @@
                         «Подарок Дроссельмейера» объявили
                         в Воткинске</h2>
                     <div class="newsImg">
-                        <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                        <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                         <div class="newsImgStats">
                             <div class="newsStatEye">
                                 <span class="ImgIcon eye">93</span>
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="autor d-flex">
-                    <img src="/assets/img/autor.png" alt="">
+                    <img src="assets/img/autor.png" alt="">
                     <div class="autorText">
                         <p class="autorT">Автор</p>
                         <h6 class="title">Наталья Куделич</h6>
@@ -460,28 +460,28 @@
                     <h5 class="title tagTitle">Расскажите друзьям:</h5>
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/fc.svg" alt="">
+                            <img src="assets/img/social/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/tw.svg" alt="">
+                            <img src="assets/img/social/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/vk.svg" alt="">
+                            <img src="assets/img/social/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/od.svg" alt="">
+                            <img src="assets/img/social/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/yt.svg" alt="">
+                            <img src="assets/img/social/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/inst.svg" alt="">
+                            <img src="assets/img/social/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/mail.svg" alt="">
+                            <img src="assets/img/social/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/gl.svg" alt="">
+                            <img src="assets/img/social/gl.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -491,22 +491,22 @@
 
                     <div class="tagsContent d-flex flex-wrap">
                         <div class="recording tagRecording">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня</p>
                         </div>
                         <div class="recording tagRecording">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня</p>
                         </div>
                         <div class="recording tagRecording">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня</p>
                         </div>
                         <div class="recording tagRecording">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня</p>
                         </div>
@@ -516,7 +516,7 @@
 
                 <div class="rad d-block">
                     <h4 class="title">Комментарии:</h4>
-                    <img class="commImg" src="/assets/img/comments.png" alt="">
+                    <img class="commImg" src="assets/img/comments.png" alt="">
                 </div>
 
                 <div class="rightTitle">
@@ -524,7 +524,7 @@
                 </div>
                 <div class="blockParent">
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -542,7 +542,7 @@
                         <a class="transLink" href=""></a>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -560,7 +560,7 @@
                         </div>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -633,8 +633,8 @@
                     <a class="recordingAlllink" href="/">все сообщения</a>
                 </div>
                 <div class="busImg">
-                    <img class="busImgImg" src="/assets/img/bus.png" alt="">
-                    <img class="busImgImg bus2" src="/assets/img/bus.png" alt="">
+                    <img class="busImgImg" src="assets/img/bus.png" alt="">
+                    <img class="busImgImg bus2" src="assets/img/bus.png" alt="">
                 </div>
 
                 <div class="rightTitle">
@@ -719,7 +719,7 @@
                 <div class="present float-left">
                     <div class="presentParent">
                         <p class="presentText">получай</p>
-                        <img class="presentImg" src="/assets/img/present.jpg" alt="">
+                        <img class="presentImg" src="assets/img/present.jpg" alt="">
                     </div>
                     <h2 class="presentTitle">Бонусы</h2>
                     <p class="presentText textReg">за регистрацию</p>
@@ -741,7 +741,7 @@
 
                 <div class="newsConParent d-flex flex-wrap pb-0">
                     <div class="yanText newsCon">
-                        <img class="newsImg1" src="/assets/img/rocket.jpg" alt="">
+                        <img class="newsImg1" src="assets/img/rocket.jpg" alt="">
                         <p class="newsConText">Руководитель пресс-службы
                             санкт-петербургского
                             «Зенита» Дмитрий
@@ -751,7 +751,7 @@
                             от «Краснодара».</p>
                     </div>
                     <div class="yanText newsCon">
-                        <img class="newsImg1" src="/assets/img/chorus.jpg" alt="">
+                        <img class="newsImg1" src="assets/img/chorus.jpg" alt="">
                         <p class="newsConText">3 октября Вашингтон объявил
                             о приостановке переговоров
                             с Россией по достижению
@@ -761,7 +761,7 @@
                             Кирби.</p>
                     </div>
                     <div class="yanText newsCon">
-                        <img class="newsImg1" src="/assets/img/rocket.jpg" alt="">
+                        <img class="newsImg1" src="assets/img/rocket.jpg" alt="">
                         <p class="newsConText">Ситуацию вокруг своей
                             премии Страшнов
                             охарактеризовал как
@@ -771,7 +771,7 @@
                             отказа от премии.</p>
                     </div>
                     <div class="yanText newsCon">
-                        <img class="newsImg1" src="/assets/img/rocket.jpg" alt="">
+                        <img class="newsImg1" src="assets/img/rocket.jpg" alt="">
                         <p class="newsConText">Руководитель пресс-службы
                             санкт-петербургского
                             «Зенита» Дмитрий
@@ -781,7 +781,7 @@
                             от «Краснодара».</p>
                     </div>
                     <div class="yanText newsCon">
-                        <img class="newsImg1" src="/assets/img/rocket.jpg" alt="">
+                        <img class="newsImg1" src="assets/img/rocket.jpg" alt="">
                         <p>3 октября Вашингтон объявил
                             о приостановке переговоров
                             с Россией по достижению
@@ -854,7 +854,7 @@
                     </div>
                     <div class="footerImgParent">
 
-                        <img class="footerImg" src="/assets/img/footerImg.png" alt="">
+                        <img class="footerImg" src="assets/img/footerImg.png" alt="">
                     </div>
                 </div>
 
@@ -862,28 +862,28 @@
                 <div class="footerLinksParent">
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/fc.svg" alt="">
+                            <img src="assets/img/social/footer/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/tw.svg" alt="">
+                            <img src="assets/img/social/footer/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/vk.svg" alt="">
+                            <img src="assets/img/social/footer/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/od.svg" alt="">
+                            <img src="assets/img/social/footer/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/yt.svg" alt="">
+                            <img src="assets/img/social/footer/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/inst.svg" alt="">
+                            <img src="assets/img/social/footer/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/mail.svg" alt="">
+                            <img src="assets/img/social/footer/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/google.svg" alt="">
+                            <img src="assets/img/social/footer/google.svg" alt="">
                         </a>
                     </div>
                     <div class="footerText footerRight">
