--- a/vtvVideo.html
+++ b/vtvVideo.html
@@ -22,9 +22,9 @@
 
 <header>
     <div class="block">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
     </div>
 </header>
 
@@ -34,7 +34,7 @@
             <p class="versionLink">Логотип</p>
             <div class="travel">
                 <a class="travelLink" href="">
-                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                    <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
                 </a>
                 <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
                 <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
@@ -104,7 +104,7 @@
                             <button type="button" class="presentBtn">Голосовать</button>
                             <button type="button" class="presentBtn">все опросы</button>
                         </div>
-                        <img class="hiddenImg" src="/assets/img/teamH.png" alt="">
+                        <img class="hiddenImg" src="assets/img/teamH.png" alt="">
                     </div>
                 </div>
                 <div class="middle col-xl-6 p-0 d-flex flex-wrap">
@@ -186,7 +186,7 @@
 
                     </div>
                     <div class="recHidden">
-                        <img class="recHiddenImg" src="/assets/img/shop.jpg" alt="">
+                        <img class="recHiddenImg" src="assets/img/shop.jpg" alt="">
                     </div>
 
                 </div>
@@ -246,7 +246,7 @@
                     <div class="container">
                         <div class="vtvContent d-flex justify-content-between">
                             <div class="d-flex">
-                                <img src="/assets/img/autor.png" alt="">
+                                <img src="assets/img/autor.png" alt="">
                                 <div class="autorText">
                                     <p>Автор</p>
                                     <h6 class="title">Наталья Куделич</h6>
@@ -298,41 +298,41 @@
                     <h5 class="title tagTitle">Расскажите друзьям:</h5>
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/fc.svg" alt="">
+                            <img src="assets/img/social/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/tw.svg" alt="">
+                            <img src="assets/img/social/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/vk.svg" alt="">
+                            <img src="assets/img/social/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/od.svg" alt="">
+                            <img src="assets/img/social/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/yt.svg" alt="">
+                            <img src="assets/img/social/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/inst.svg" alt="">
+                            <img src="assets/img/social/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/mail.svg" alt="">
+                            <img src="assets/img/social/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/gl.svg" alt="">
+                            <img src="assets/img/social/gl.svg" alt="">
                         </a>
                     </div>
                 </div>
 
                 <div class="rad d-block">
                     <h4 class="title">Комментарии:</h4>
-                    <img class="commImg" src="/assets/img/comments.png" alt="">
+                    <img class="commImg" src="assets/img/comments.png" alt="">
                 </div>
                 <div class="video">
                     <h3 class="title videoTitle">Комментрируемое</h3>
                     <div class="videoToday test w-100 d-flex flex-wrap border-bottom-0">
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/9.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/9.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -344,7 +344,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -368,7 +368,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/3.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/3.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -380,7 +380,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/6.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/6.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/7.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/7.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -414,17 +414,17 @@
 
                     <div class="tagsContent d-flex flex-wrap">
                         <div class="recording tagRecording align-items-center">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня на возражения</p>
                         </div>
                         <div class="recording tagRecording align-items-center">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня на возражения</p>
                         </div>
                         <div class="recording tagRecording align-items-center">
-                            <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="partImg" src="assets/img/chorus.jpg" alt="">
                             <p class="recordingLink">Керри объявляет Йемен
                                 о прекращении огня на возражения</p>
                         </div>
@@ -436,7 +436,7 @@
                     <h3 class="title videoTitle">Вы смотрели</h3>
                     <div class="videoToday w-100 d-flex flex-wrap">
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/9.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/9.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -448,7 +448,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -460,7 +460,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -484,7 +484,7 @@
                     <h2 class="title">Популярное видео</h2>
                 </div>
                 <div class="busImg busVtv strLink">
-                    <img class="busImgImg" src="/assets/img/bus.png" alt="">
+                    <img class="busImgImg" src="assets/img/bus.png" alt="">
                 </div>
 
                 <div class="hearing vkGroup">
@@ -500,7 +500,7 @@
                 <div class="video">
                     <div class="videoToday w-100 d-flex flex-wrap border-bottom-0">
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/2.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/2.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -512,7 +512,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -524,7 +524,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -536,7 +536,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/5.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/5.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -548,7 +548,7 @@
                             </div>
                         </div>
                         <div class="videoContent">
-                            <img class="videoImg" src="/assets/img/musicImg/1.png" alt="">
+                            <img class="videoImg" src="assets/img/musicImg/1.png" alt="">
                             <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                             <p class="name">Наталья Гуревич</p>
                             <div class="newsImgStats vtvStats">
@@ -586,10 +586,10 @@
                         <p>Мы в соц. сетях:</p>
                         <div class="footerIconsParent footerLeftIcon">
                             <a class="footerIcons" href="/">
-                                <img src="/assets/img/social/footer/vk.svg" alt="">
+                                <img src="assets/img/social/footer/vk.svg" alt="">
                             </a>
                             <a class="footerIcons" href="/">
-                                <img src="/assets/img/social/footer/yt.svg" alt="">
+                                <img src="assets/img/social/footer/yt.svg" alt="">
                             </a>
                         </div>
                         <div class="footerLinks w-100 d-flex">
@@ -612,7 +612,7 @@
                     </div>
                     <div class="footerImgParent">
 
-                        <img class="footerImg" src="/assets/img/footerImg.png" alt="">
+                        <img class="footerImg" src="assets/img/footerImg.png" alt="">
                     </div>
                 </div>
 
@@ -621,28 +621,28 @@
 
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/fc.svg" alt="">
+                            <img src="assets/img/social/footer/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/tw.svg" alt="">
+                            <img src="assets/img/social/footer/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/vk.svg" alt="">
+                            <img src="assets/img/social/footer/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/od.svg" alt="">
+                            <img src="assets/img/social/footer/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/yt.svg" alt="">
+                            <img src="assets/img/social/footer/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/inst.svg" alt="">
+                            <img src="assets/img/social/footer/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/mail.svg" alt="">
+                            <img src="assets/img/social/footer/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/google.svg" alt="">
+                            <img src="assets/img/social/footer/google.svg" alt="">
                         </a>
                     </div>
 
