--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 <header>
     <div class="block">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
     </div>
 </header>
 
@@ -39,7 +39,7 @@
             <p class="versionLink">Логотип</p>
             <div class="travel">
                 <a class="travelLink" href="">
-                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                    <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
                 </a>
                 <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
                 <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
@@ -111,7 +111,7 @@
                             <button type="button" class="presentBtn">Голосовать</button>
                             <button type="button" class="presentBtn">все опросы</button>
                         </div>
-                        <img class="hiddenImg" src="/assets/img/teamH.png" alt="">
+                        <img class="hiddenImg" src="assets/img/teamH.png" alt="">
                     </div>
                 </div>
                 <div class="middle col-xl-6 p-0 d-flex flex-wrap">
@@ -193,7 +193,7 @@
 
                     </div>
                     <div class="recHidden">
-                        <img class="recHiddenImg" src="/assets/img/shop.jpg" alt="">
+                        <img class="recHiddenImg" src="assets/img/shop.jpg" alt="">
                     </div>
 
                 </div>
@@ -283,7 +283,7 @@
                     <a class="recordingAlllink" href="/">все записи в блогах</a>
                 </div>
                 <div class="newsImg">
-                    <img class="rybbuImg" src="/assets/img/term.jpg" alt="">
+                    <img class="rybbuImg" src="assets/img/term.jpg" alt="">
                 </div>
                 <div class="rightTitle">
                     <h2 class="title">Выбор редакции</h2>
@@ -334,12 +334,12 @@
                     <a class="recordingAlllink" href="/">все новости редакции</a>
                 </div>
                 <div class="newsImg">
-                    <img class="rybbuImg" src="/assets/img/wms.jpg" alt="">
+                    <img class="rybbuImg" src="assets/img/wms.jpg" alt="">
                 </div>
 
                 <div class="hearing">
                     <div class="hearingImg">
-                        <img src="/assets/img/svg/ear.svg" alt="">
+                        <img src="assets/img/svg/ear.svg" alt="">
                     </div>
                     <div class="hearingContent">
                         <a class="close" href="/"></a>
@@ -358,35 +358,35 @@
                 </div>
                 <div class="blockParent">
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording">
-                        <img class="partImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="partImg" src="assets/img/chorus.jpg" alt="">
                         <p class="recordingLink">Керри объявляет Йемен
                             о прекращении огня
                             на возражения</p>
@@ -418,7 +418,7 @@
                 <div class="news">
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                             <div class="newsImgStats">
                                 <div class="newsStatEye">
                                     <span class="eye">93</span>
@@ -435,7 +435,7 @@
                     </div>
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/chorus.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockPoster">афиша</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -446,7 +446,7 @@
 
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                             <div class="newsImgStats">
                                 <div class="newsStatEye">
                                     <span class="eye">93</span>
@@ -465,7 +465,7 @@
                     </div>
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/chorus.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockNews">новости</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -478,7 +478,7 @@
 
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockPoster">афиша</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -488,7 +488,7 @@
                     </div>
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/chorus.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockPoster">афиша</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -499,7 +499,7 @@
 
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                             <div class="newsImgStats">
                                 <div class="newsStatEye">
                                     <span class="eye">93</span>
@@ -516,7 +516,7 @@
                     </div>
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/chorus.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockVtv">втв</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -527,7 +527,7 @@
 
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/rocket.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/rocket.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockNews">новости</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -539,7 +539,7 @@
                     </div>
                     <div class="newsBlock">
                         <div class="newsImg">
-                            <img class="newsImgImg" src="/assets/img/chorus.jpg" alt="">
+                            <img class="newsImgImg" src="assets/img/chorus.jpg" alt="">
                             <p class="newsImgBlock newsImgBlockNews">новости</p>
                             <a class="transLink" href=""></a>
                         </div>
@@ -552,13 +552,13 @@
                         <button type="button" class="load">загрузить еще</button>
                     </div>
                 </div>
-                <img class="advBanner" src="/assets/img/banner1.png" alt="">
+                <img class="advBanner" src="assets/img/banner1.png" alt="">
                 <div class="rightTitle">
                     <h2 class="title">Интересное</h2>
                 </div>
                 <div class="blockParent">
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -574,7 +574,7 @@
                         <a class="transLink" href=""></a>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -590,7 +590,7 @@
                         </div>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -606,7 +606,7 @@
                         <a class="transLink" href=""></a>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -622,7 +622,7 @@
                         </div>
                     </div>
                     <div class="recording">
-                        <img class="IntImg" src="/assets/img/chorus.jpg" alt="">
+                        <img class="IntImg" src="assets/img/chorus.jpg" alt="">
                         <div class="blockParentInt">
                             <p class="recordingLink intLink">Керри объявляет Йемен о прекращении огня на возражения
                                 правительства США госсекретарь Джон Керри заявил во вторник,
@@ -712,8 +712,8 @@
                     <a class="recordingAlllink" href="/">все сообщения</a>
                 </div>
                 <div class="busImg">
-                    <img class="busImgImg" src="/assets/img/bus.png" alt="">
-                    <img class="busImgImg bus2" src="/assets/img/bus.png" alt="">
+                    <img class="busImgImg" src="assets/img/bus.png" alt="">
+                    <img class="busImgImg bus2" src="assets/img/bus.png" alt="">
                 </div>
 
                 <div class="rightTitle">
@@ -798,7 +798,7 @@
                 <div class="present float-left">
                     <div class="presentParent">
                         <p class="presentText">получай</p>
-                        <img class="presentImg" src="/assets/img/present.jpg" alt="">
+                        <img class="presentImg" src="assets/img/present.jpg" alt="">
                     </div>
                     <h2 class="presentTitle">Бонусы</h2>
                     <p class="presentText textReg">за регистрацию</p>
@@ -868,7 +868,7 @@
                     </div>
                     <div class="footerImgParent">
 
-                        <img class="footerImg" src="/assets/img/footerImg.png" alt="">
+                        <img class="footerImg" src="assets/img/footerImg.png" alt="">
                     </div>
                 </div>
 
@@ -876,28 +876,28 @@
                 <div class="footerLinksParent">
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/fc.svg" alt="">
+                            <img src="assets/img/social/footer/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/tw.svg" alt="">
+                            <img src="assets/img/social/footer/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/vk.svg" alt="">
+                            <img src="assets/img/social/footer/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/od.svg" alt="">
+                            <img src="assets/img/social/footer/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/yt.svg" alt="">
+                            <img src="assets/img/social/footer/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/inst.svg" alt="">
+                            <img src="assets/img/social/footer/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/mail.svg" alt="">
+                            <img src="assets/img/social/footer/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/google.svg" alt="">
+                            <img src="assets/img/social/footer/google.svg" alt="">
                         </a>
                     </div>
                     <div class="footerText footerRight">
