--- a/vtvMain.html
+++ b/vtvMain.html
@@ -22,9 +22,9 @@
 
 <header>
     <div class="block">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
-        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
+        <img class="adv" src="assets/img/advCar.png" alt="">
     </div>
 </header>
 
@@ -34,7 +34,7 @@
             <p class="versionLink">Логотип</p>
             <div class="travel">
                 <a class="travelLink" href="">
-                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                    <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
                 </a>
                 <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
                 <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
@@ -103,7 +103,7 @@
                             <button type="button" class="presentBtn">Голосовать</button>
                             <button type="button" class="presentBtn">все опросы</button>
                         </div>
-                        <img class="hiddenImg" src="/assets/img/teamH.png" alt="">
+                        <img class="hiddenImg" src="assets/img/teamH.png" alt="">
                     </div>
                 </div>
                 <div class="middle col-xl-6 p-0 d-flex flex-wrap">
@@ -185,7 +185,7 @@
 
                     </div>
                     <div class="recHidden">
-                        <img class="recHiddenImg" src="/assets/img/shop.jpg" alt="">
+                        <img class="recHiddenImg" src="assets/img/shop.jpg" alt="">
                     </div>
 
                 </div>
@@ -239,7 +239,7 @@
     <div class="container">
         <div class="vtvContent vtvContentAutor d-flex justify-content-between">
             <div class="autor d-flex align-items-center">
-                <img src="/assets/img/autor.png" alt="">
+                <img src="assets/img/autor.png" alt="">
                 <div class="autorText">
                     <p class="autorT">Автор</p>
                     <h6 class="title">Наталья Куделич</h6>
@@ -276,7 +276,7 @@
         <h3 class="title videoTitle">Видео сегодня</h3>
         <div class="videoToday w-100 d-flex flex-wrap linewidth">
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/1.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/1.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/2.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/2.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/3.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/3.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -312,7 +312,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/5.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/5.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -336,7 +336,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/6.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/6.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -348,7 +348,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/7.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/7.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Ча</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -360,7 +360,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -383,7 +383,7 @@
         <h3 class="title videoTitle">Популярное видео</h3>
         <div class="videoToday w-100 d-flex flex-wrap">
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/1.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/1.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -395,7 +395,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/7.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/7.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -407,7 +407,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/6.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/6.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -419,7 +419,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/3.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/3.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -431,7 +431,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/9.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/9.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -443,7 +443,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -455,7 +455,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -467,7 +467,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/5.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/5.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -532,7 +532,7 @@
         <div class="videoToday w-100 d-flex flex-wrap">
 
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/6.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/6.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -544,7 +544,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/7.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/7.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -556,7 +556,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/5.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/5.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -568,7 +568,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/8.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/8.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -591,7 +591,7 @@
         <h3 class="title videoTitle">Комментрируемое</h3>
         <div class="videoToday w-100 d-flex flex-wrap border-bottom-0">
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/1.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/1.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -603,7 +603,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/2.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/2.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -615,7 +615,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/3.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/3.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -627,7 +627,7 @@
                 </div>
             </div>
             <div class="videoContent">
-                <img class="videoImg" src="/assets/img/musicImg/4.png" alt="">
+                <img class="videoImg" src="assets/img/musicImg/4.png" alt="">
                 <h4 class="title">Поздравления для ВТВ с 20-летием. Часть 3</h4>
                 <p class="name">Наталья Гуревич</p>
                 <div class="newsImgStats vtvStats">
@@ -661,10 +661,10 @@
                         <p>Мы в соц. сетях:</p>
                         <div class="footerIconsParent footerLeftIcon">
                             <a class="footerIcons" href="/">
-                                <img src="/assets/img/social/footer/vk.svg" alt="">
+                                <img src="assets/img/social/footer/vk.svg" alt="">
                             </a>
                             <a class="footerIcons" href="/">
-                                <img src="/assets/img/social/footer/yt.svg" alt="">
+                                <img src="assets/img/social/footer/yt.svg" alt="">
                             </a>
                         </div>
                         <div class="footerLinks w-100 d-flex">
@@ -687,7 +687,7 @@
                     </div>
                     <div class="footerImgParent">
 
-                        <img class="footerImg" src="/assets/img/footerImg.png" alt="">
+                        <img class="footerImg" src="assets/img/footerImg.png" alt="">
                     </div>
                 </div>
 
@@ -696,28 +696,28 @@
 
                     <div class="footerIconsParent">
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/fc.svg" alt="">
+                            <img src="assets/img/social/footer/fc.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/tw.svg" alt="">
+                            <img src="assets/img/social/footer/tw.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/vk.svg" alt="">
+                            <img src="assets/img/social/footer/vk.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/od.svg" alt="">
+                            <img src="assets/img/social/footer/od.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/yt.svg" alt="">
+                            <img src="assets/img/social/footer/yt.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/inst.svg" alt="">
+                            <img src="assets/img/social/footer/inst.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/mail.svg" alt="">
+                            <img src="assets/img/social/footer/mail.svg" alt="">
                         </a>
                         <a class="footerIcons" href="/">
-                            <img src="/assets/img/social/footer/google.svg" alt="">
+                            <img src="assets/img/social/footer/google.svg" alt="">
                         </a>
                     </div>
 
